src/objects/Match_Setup__c.object
<CustomObject>
    <fields>
        <fullName>Appointment_Count__c</fullName>
        <label>Appointment Count</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Appointment_Duration__c</fullName>
        <label>Appointment Duration</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Appt_Count__c</fullName>
        <description>Number of appointments a buyer or seller can have</description>
        <label>Appt Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Appt_End_Time__c</fullName>
        <description>Appointment requests can not be put after this date.</description>
        <label>Appt End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Appt_Start_Time__c</fullName>
        <description>Appointment requests can be put after this date.</description>
        <label>Appt Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Break_Minutes__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Break Minutes</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>Matchmaking End Time</label>
        <picklist>
            <picklistValues>
                <fullName>12:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>BLN_Event__c</referenceTo>
        <relationshipName>Match_Setup</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Match_Type__c</fullName>
        <description>O - Open  --
C - Closed  --
S - Semi-Open  --
X - Custom</description>
        <label>Match Type</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Matchmaking Start Time</label>
        <picklist>
            <picklistValues>
                <fullName>12:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>BLN Match Setup</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MS-{000000}</displayFormat>
        <label>Match Setup Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BLN Match Setup</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>